package ar.unlp.agroecologia.modelo;

public enum CanalNotificacion {
    INTERNA,
    EMAIL
}
