package ar.unlp.agroecologia.modelo;

public enum EtapaProceso {
    ENVIO_TRABAJOS,
    EVALUACION,
    NOTIFICACION,
    PAGO_TEMPRANO
}
